chore: remove unused env/trace artefacts